<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ANIMALLE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ContextoDados_onUpgrade">         CREATE TABLE IF NOT EXISTS  Animais (ID INTEGER PRIMARY KEY AUTOINCREMENT, Tipo TEXT, Cor TEXT);</string>
    <string name="ContextoDados_onCreate">	    CREATE TABLE IF NOT EXISTS Animais (ID INTEGER PRIMARY KEY AUTOINCREMENT, Tipo TEXT, Cor TEXT);</string>
    <string name="animais">Animais</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnCadastroIngrediente">Ingrediente</string>
    <string name="btnCadastroNutriente">Nutriente</string>
    <string name="btnCadastroAnimal">Animal</string>
    <string name="btnCadastroTipoAnimal">tipo</string>
    <string name="btnSairRelatorio">Voltar Relatorio</string>
    <string name="btnVincula">Vincula</string>
    <string name="btnVoltarCadastro">Voltar Cadastro</string>
    <string name="btnSalvarIngre_Nutri">Salvar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="lblNomeAnimal">Nome do Animal:</string>
    <string name="lblSel_Ingrediente">Selecione um Ingrediente:</string>
    <string name="lblSel_Animal_i">Selecione um Animal:</string>
    <string name="btnGeraGraficoIngrediente_Animal">Gerar Gráfico</string>
    <string name="btnGeraGrafico">Gera Gráfico</string>
    <string name="btnGeraGraficoIngrediente">Gera Gráfico</string>
    <string name="porcNutriente">Porcentagem Nutriente</string>
    <string name="lblSel_Nutriente">Selecione um Nutriente:</string>
    <string name="porcIngrediente">Porcentagem do Ingrediente:</string>
    <string name="lblSel_Animal">Selecione um Animal:</string>
    <string name="lblSel_Ingrediente_Animal">Selecione um Ingrediente:</string>
    <string name="lblCor">Cor do Animal:</string>
    <string name="ContextoDados_onUpgrade_ingrediente">         CREATE TABLE IF NOT EXISTS  Ingredientes (ID INTEGER PRIMARY KEY AUTOINCREMENT, Nome TEXT);</string>
    <string name="ContextoDados_onCreate_ingrediente">	    CREATE TABLE IF NOT EXISTS Ingredientes (ID INTEGER PRIMARY KEY AUTOINCREMENT, Nome TEXT);</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="lblNomeIngrediente">Nome do Ingrediente:</string>
    <string name="lblPrecoIngrediente">Preço/Kg:</string>
    <string name="btnSalvarIngrediente">Salvar</string>
    <string name="btnCancelarIngrediente">Cancelar</string>
    <string name="title_activity_cadastro">Cadastro Animais</string>
    <string name="title_activity_cadastro_ingrediente">Cadastros Ingredinte</string>
    <string name="ContextoDados_onUpgrade_nutriente">         CREATE TABLE IF NOT EXISTS  Nutrientes (ID INTEGER PRIMARY KEY AUTOINCREMENT, Nome TEXT);</string>
    <string name="ContextoDados_onCreate_nutriente">	    CREATE TABLE IF NOT EXISTS Nutrientes (ID INTEGER PRIMARY KEY AUTOINCREMENT, Nome TEXT);</string>
    <string name="nutrientes">Nutrientes</string>
    <string name="lblNomeNutriente">Nome do Nutriente:</string>
    <string name="btnSalvarNutriente">Salvar</string>
    <string name="title_activity_cadastro_nutriente">Cadastros Nutriente</string>
    <string name="ContextoDados_onUpgrade_tipo_animal">         CREATE TABLE IF NOT EXISTS  Tipo_Animal (ID INTEGER PRIMARY KEY AUTOINCREMENT, TipoAnimal TEXT);</string>
    <string name="ContextoDados_onCreate_tipo_animal">	    CREATE TABLE IF NOT EXISTS Tipo_Animal (ID INTEGER PRIMARY KEY AUTOINCREMENT, TipoAnimal TEXT);</string>
    <string name="tipo_animal">Tipo Animal</string>
    <string name="btnSalvarTipoAnimal">Salvar</string>
    <string name="lblTipoAnimal">Tipo de Animal:</string>
    <string name="btnCancelarTipoAnimal">Cancelar</string>
    <string name="title_activity_cadastro_tipo_animal">Cadastrar Tipo Animal</string>
    <string name="title_activity_ingr_nutri">Vincula Nutriente à Ingrediente</string>
    <string name="title_activity_rel_nutriente">Relatório Nutriente</string>
    <string name="titel_activity_rel_ingrediente">Relatório Ingrediente</string>
    <string name="title_activity_rel_animais"> Relatório Animais</string>
    <string name="title_activity_animal_ingrediente">Vincula Ingrediente à Animal</string>
    <string name="title_activity_grafico_nutriente">Gera Relatorio</string>
    <string name="title_activity_grafico_ingrediente">Gera Grafico Ingrediente</string>
    <string name="title_activity_graficos">Gera graficos</string>
    <string name="title_activity_cadastros">Cadastros</string>
    <string name="title_activity_relatorios">Relatórios</string>
    <string name="title_activity_grafico">Gráficos</string>
    <string name="help">Teste Menu</string>
    <string name="testeMenu">Teste dois</string>

    <string-array name="menu">
        <item>Cadastro de Animais</item>
        <item>Cadastro de Ingrediente</item>
        <item>Cadastro de Nutriente</item>
    </string-array>
    <string-array name="menu_icones">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </string-array>
    <string-array name="cores">
        <item>-16777216</item>
        <item>-12303292</item>
        <item>-7829368</item>
        <item>-3355444</item>
        <item>-65536</item>
    </string-array>

</resources>