<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    
    <TextView
	        android:id="@+id/lblSel_Ingrediente"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_x="8dp"
	        android:layout_y="9dp"
	        android:text="@string/lblSel_Ingrediente"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Spinner
	        android:id="@+id/spinnerIngrediente"
	        android:layout_width="174dp"
	        android:layout_height="82dp" />
    
    <TextView
	        android:id="@+id/lblporcNutriente"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_x="8dp"
	        android:layout_y="9dp"
	        android:text="@string/porcNutriente"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	 <EditText
	        android:id="@+id/txtPorcentagemNutriente"
	        android:layout_width="180dp"
	        android:layout_height="40dp"
	        android:layout_x="78dp"
	        android:layout_y="50dp"
	        android:inputType="textPersonName" />
	 
    
    <TextView
	        android:id="@+id/lblSel_Nutriente"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_x="8dp"
	        android:layout_y="9dp"
	        android:text="@string/lblSel_Nutriente"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Spinner
	        android:id="@+id/spinnerNutriente"
	        android:layout_width="174dp"
	        android:layout_height="82dp" />
    
     <Button
	        android:id="@+id/btnSalvar"
	        android:layout_width="82dp"
	        android:layout_height="wrap_content"
	        android:text="@string/btnSalvarIngre_Nutri" />
	 
	    <Button
	        android:id="@+id/btnCancelar"
	        android:layout_width="132dp"
	        android:layout_height="wrap_content"
	        android:layout_x="78dp"
	        android:layout_y="141dp"
	        android:text="Cancelar" />
    

</LinearLayout>
