<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_telas"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblSel_Animal"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="30sp"
            android:text="@string/lblSel_Animal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerAnimal"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp" />

        <TextView
            android:id="@+id/lblporcIngrediente"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="30sp"
            android:text="@string/porcIngrediente"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtPorcentagemIngrediente"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblSel_Ingrediente"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="30sp"
            android:text="@string/lblSel_Ingrediente_Animal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerIngrediente"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="145sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:text="@string/btnSalvarIngre_Nutri" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="145sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:text="Cancelar" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>